tests/application/authorization-policy/00-application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: authorization-policy
spec:
  image: image
  port: 8080
