tests/application/authorization-policy/application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: application
spec:
  image: image
  port: 8080
