tests/application/authorization-policy/application-assert.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: application-auth-policy
spec:
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
      to:
        - operation:
            notPaths:
              - /actuator*
  selector:
    matchLabels:
      app: application
