tests/application/authorization-policy/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: authorization-policy
spec:
  skip: false
  concurrent: false
  skipDelete: false
  # these timeouts are applied per operation
  timeouts:
    apply: 10s
    assert: 10s
    error: 10s
  steps:
    - try:
        - create:
            file: application.yaml
    - try:
        - assert:
            file: application-assert.yaml
    - try:
        - delete:
            apiVersion: skiperator.kartverket.no/v1alpha1
            kind: Application
            name: authorization-policy
